# History_RCA

./: .gitignore  README.md  analyze_component_keyword_accuracy.py  main.py  pyproject.toml  run.py
chroma_kb/: chroma.sqlite3
database_building/: README.md  build_chromadb.py  call_llm.py  generate_prompt.py  run.sh  split_dataset.py  test_pipeline.py  validate.py
database_building/knowledge_base_data/: 009be6db-313.json  0419ba04-373.json  046aefa7-170.json  05b57997-154.json  0a373d08-149.json  0a9fce75-340.json  0b81a605-339.json  0efb9550-160.json  0fccdcad-125.json  1193b5d8-230.json  11cdd935-418.json  11f619f0-285.json  13ebf32d-216.json  146da42a-586.json  14c1047f-366.json  1573cbd5-588.json  162fe36a-151.json  192019ef-486.json  1ae8a5c3-555.json  1c47d7bf-157.json  1c4a277a-491.json  1ef94bd7-352.json  20f9c3bc-558.json  21aa302f-132.json  233e0282-88.json  238afe01-573.json  (+197 more)
history_rca/: .env copy  agent.py  prompt.py  prompt_no_rag.py  prompt_single.py  tools.py
input/: input.json  minimal_input.json
output/: accuracy_analysis.csv  component_keyword_total_table.csv  detailed_analysis_report.md  generate_paper_artifacts_v2.py  groundtruth.jsonl  minimal_groundtruth.txt  minimal_output.jsonl  raw_result.jsonl  result.jsonl  submit.py
splits/: seen_test.jsonl  seen_test_uuids.txt  seen_train.jsonl  unseen_test.jsonl  unseen_test_uuids.txt
test/: extra_tools.md  test_search_logs.py  test_search_metrics.py  test_search_tools_with_uuid.py  test_search_traces.py
verify/: accuracy_analysis.csv  component_keyword_total_table.csv  result.txt
(+2653 files in other folders)
